--- a/secrets.toml
+++ b/secrets.toml
@@ -10,6 +10,6 @@ AZURE_OPENAI_DEPLOYMENT = "gpt-4o-mini"
 AZURE_OPENAI_DEPLOYMENT_EMBEDDINGS = "text-embedding-3-large"
 
 [AUTHORIZED_USERS]
-admin = "SAI2025!"
-vashista = "YourPassword123"
+Admin = "SwiAppPro000!"
+Vashista = "VasVenPro263!"
 # Add more users here
