Change font from 'sans serif' to 'Candara'

--- a/config.toml
+++ b/config.toml
@@ -3,4 +3,4 @@ primaryColor="#2563EB"
 backgroundColor="#F7F5F2"
 secondaryBackgroundColor="#FFFFFF"
 textColor="#1F2937"
-font="sans serif"
+font="Candara"
